docs/v1.0.5/Version-History.md
[<img src="https://about.mappls.com/images/mappls-b-logo.svg" height="60"/> </p>](https://www.mapmyindia.com/api)


# [Version History](#Version-History)


| Version | Last Updated | Author |  Release Note|
| ---- | ---- | ---- | ---- |
| v1.2.3  | 16 September 2026  | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Updated minimum Android version to 23   </br> - Fix Bitmap Optimisation Play Store Warning in Android </br> - Added `mapCentre` & `isPrimary` in Autosuggest Request </br> - Added `suggester` & `partnersFlag` in AutoSuggest Response </br> - Added `filter`, `bounds`, `refLocation` & `bridge` in POI Along Route Request </br> - Added `responseCode`, `pageInfo`, `suggestedSearches`, `partnersFlag`, `hourOfOperation`, `longDescription`, `shortDescription` & `orderIndex` in POI Along Route Response </br> - Added `scores` & `actualGeoLevel` in Geocoding Request </br> - Added `confidenceScore` & `mapplsPinAdminType` in Geocoding Response </br> - Added `itemCount` in Nearby Request </br> - Added `explanation`, `partnersFlag` & `baseUrl` in Nearby Response </br> - Added `isVenue`, `entryCoordinates` & `venueDetails` in Reverse Geocoding Response                    |
| v1.2.2  | 01 August 2026  | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Remove `hyperLocal` & `zoom` from Autosugget Request.  </br> -  Remove `username` from Nearby Request </br> - Remove `username` from Text Search Request.                     |
| v1.2.1  | 14 October 2025  | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Support for 16KB in Android       |
| v1.2.0 | 12 May 2025 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Fix `PluginRegistry` issue in Android <br/> - Fix Bitcode issue in IOS |
| v1.1.2 | 23 December 2024 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Added Option to set Base Url in Search and Routing Apis |
| v1.1.1 | 28 October 2024 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Bug Fixes and Improvements |
| v1.1.0 | 24 July 2024 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - All Dart enums have been migrated from mixed cases to lower camelcase according to the camel_case_types lint rule. <br/> - Added minimum Dart SDK support to 3.0 <br/> - Fixed Mappls Pin Marker issue in Flutter IOS |
| v1.0.2 | 17 June 2024 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Bug Fixes |
| v1.0.1 | 04 December 2023 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Security Improvements <br/> - Bug Fixes |
| v1.0.0 | 06 March 2023 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   Initial release  |

<br></br>

[<p align="center"> <img src="https://www.mapmyindia.com/api/img/icons/stack-overflow.png"/> ](https://stackoverflow.com/questions/tagged/mappls-api)[![](https://www.mapmyindia.com/api/img/icons/blog.png)](https://about.mappls.com/blog/)[![](https://www.mapmyindia.com/api/img/icons/gethub.png)](https://github.com/Mappls-api)[<img src="https://mmi-api-team.s3.ap-south-1.amazonaws.com/API-Team/npm-logo.one-third%5B1%5D.png" height="40"/> </p>](https://www.npmjs.com/org/mapmyindia)



[<p align="center"> <img src="https://www.mapmyindia.com/june-newsletter/icon4.png"/> ](https://www.facebook.com/Mapplsofficial)[![](https://www.mapmyindia.com/june-newsletter/icon2.png)](https://twitter.com/mappls)[![](https://www.mapmyindia.com/newsletter/2017/aug/llinkedin.png)](https://www.linkedin.com/company/mappls/)[![](https://www.mapmyindia.com/june-newsletter/icon3.png)](https://www.youtube.com/channel/UCAWvWsh-dZLLeUU7_J9HiOA)




<div align="center">@ Copyright 2026 CE Info Systems Ltd. All Rights Reserved.</div>

<div align="center"> <a href="https://about.mappls.com/api/terms-&-conditions">Terms & Conditions</a> | <a href="https://about.mappls.com/about/privacy-policy">Privacy Policy</a> | <a href="https://about.mappls.com/pdf/mapmyIndia-sustainability-policy-healt-labour-rules-supplir-sustainability.pdf">Supplier Sustainability Policy</a> | <a href="https://about.mappls.com/pdf/Health-Safety-Management.pdf">Health & Safety Policy</a> | <a href="https://about.mappls.com/pdf/Environment-Sustainability-Policy-CSR-Report.pdf">Environmental Policy & CSR Report</a>

<div align="center">Customer Care: +91-9999333223</div>